 * Fix: Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
 * Fix: Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)
 * Fix: Ensure tag fields correctly show in both dark and light Windows high-contrast modes (Albina Starykova)


4.1.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~

 * Fix: Fix issue where lock/unlock buttons would not work on the Dashboard (home) page or the page index listing via the status sidebar (Stefan Hammer)
 * Fix: Fix disabled style on StreamField add button (Matt Westcott)
 * Fix: Ensure models are fully loaded before registering snippets, to avoid circular import issues (Matt Westcott)
 * Fix: Prevent fields without a `verbose_name` property from breaking usage report views (Matt Westcott)
 * Fix: Exclude tags from the reference index (Matt Westcott)


4.1 LTS (01.11.2022)
~~~~~~~~~~~~~~~~~~~~

 * New scheduled publishing UI, available from the Status side panel (Sage Abdullah)
 * Allow snippet admin views to be customised via `SnippetViewSet` (Sage Abdullah)
 * Implement scheduled publishing for snippets inheriting from `DraftStateMixin` (Sage Abdullah)
 * Add reference index and usage reports for images, documents and snippets (Karl Hobley, Matt Westcott)
 * Formalised support for Python 3.11 (Matt Westcott)
 * Add basic keyboard control and screen reader support for page listing re-ordering (Paarth Agarwal, Thomas van der Hoeven)
 * Add `PageQuerySet.private` method as an alias of `not_public` (Mehrdad Moradizadeh)
 * Most images in the admin will now only load once they are visible on screen (Jake Howard)
 * Allow setting default attributes on image tags (Jake Howard)
 * Optimise the performance of the Wagtail userbar to remove duplicated queries, improving page loads when viewing live pages while signed in (Jake Howard)