@@ -29,3 +29,17 @@
     @apply w-p-0;
   }
 }
+
+// Media for Windows High Contrast mode
+@media (forced-colors: $media-forced-colours) {
+  .tippy-box[data-theme='dropdown'] {
+    .tippy-content {
+      border: 2px solid transparent;
+    }
+  }
+
+  .tippy-box[data-placement^='bottom'] > .tippy-arrow::before {
+    @apply w-border-b-primary;
+    clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  }
+}
