@@ -44,6 +44,7 @@ depth: 1
  * Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
  * Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)
  * Ensure tag fields correctly show in both dark and light Windows high-contrast modes (Albina Starykova)
+ * Ensure new tooltips & tooltip menus have visible borders and tip triangle in Windows high-contrast mode (Juliet Adeboye)
 
 ## Upgrade considerations
 
